<?xml version="1.0"?>
<package format="3">
    <name>allegro_hand_description</name>
    <version>1.0.0</version>
    <description>Allegro hand models.</description>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>xacro</depend>
    <depend>touchlab_description</depend>
    <depend>joint_state_publisher_gui</depend>
    <maintainer email="shayne@touchlab.io">Shayne Shaw</maintainer>


    <license>Touchlab Limited</license>

    <export>

    </export>
</package>
